eevee renders wrong colors for hair if a vertex color is used as input #65844

Closed
opened 2019-06-15 23:58:08 +02:00 by Philipp Oeser · 3 comments
Member

System Information
Operating system: Fedora 30
Graphics card: 970m (418.56 drivers)

Blender Version
Broken: aaf65749e9
Worked: never in eevee

Short description of error
eevee will render wrong colors for hair if a vertex color is used as input (Attribute node)

Exact steps for others to reproduce the error
eevee_hair_vertex_colors_bug.blend

  • open above .blend
  • observe wrong hair colors [no the same as underlying mesh vertex colors]

This is due to a wrong offset being used in particle_calculate_parent_mcol and particle_interpolate_children_mcol
(should use num * 4 instead of just num -- will post patch shortly...)

**System Information** Operating system: Fedora 30 Graphics card: 970m (418.56 drivers) **Blender Version** Broken: aaf65749e9 Worked: never in eevee **Short description of error** eevee will render wrong colors for hair if a vertex color is used as input (Attribute node) **Exact steps for others to reproduce the error** [eevee_hair_vertex_colors_bug.blend](https://archive.blender.org/developer/F7105115/eevee_hair_vertex_colors_bug.blend) - open above .blend - observe wrong hair colors [no the same as underlying mesh vertex colors] This is due to a wrong offset being used in `particle_calculate_parent_mcol` and `particle_interpolate_children_mcol` (should use `num * 4` instead of just `num` -- will post patch shortly...)
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk

This issue was referenced by 985f33719c

This issue was referenced by 985f33719ce9108d35d5f37b4c7c79d81f708a0d
Philipp Oeser self-assigned this 2019-06-15 23:59:05 +02:00
Author
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65844
No description provided.