Fix T65844: wrong eevee hair when vertex colors are used as input

- was using wrong offset [index instead of index * 4]
- also minor correction to variable naming

Reviewers: fclem

Differential Revision: https://developer.blender.org/D5082